// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainPageView renders correctly in compact layout 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "flexDirection": "row",
      },
      {
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "width": 150,
        },
        {
          "height": 56,
          "width": "100%",
        },
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 40,
      }
    }
    style={
      {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 28,
            "fontWeight": "bold",
            "marginBottom": 20,
          }
        }
      >
        Elevation Graph Simulation
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
            "marginBottom": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.1)",
              "borderRadius": 4,
              "minWidth": 80,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontWeight": "bold",
              }
            }
          >
            Play
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.1)",
              "borderRadius": 4,
              "minWidth": 80,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontWeight": "bold",
              }
            }
          >
            Reset
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": 4,
              "flexDirection": "row",
              "gap": 4,
              "padding": 4,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              10
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              20
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "rgba(255,255,255,0.2)",
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              30
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              40
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#9fa4a8",
                "fontSize": 10,
                "marginLeft": 4,
              }
            }
          >
            km/h
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#dd9933",
              "borderRadius": 4,
              "minWidth": 80,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontWeight": "bold",
              }
            }
          >
            Lap: 
            ON
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#dd9933",
            "fontSize": 14,
            "fontWeight": "700",
            "marginBottom": 20,
          }
        }
      >
        Position: 
        0.0
        m
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          List Preview (Teide, no axes/colors)
        </Text>
        <View
          style={
            {
              "height": 50,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          Route Detail (Teide, colors/X axis)
        </Text>
        <View
          style={
            {
              "height": 160,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          2km Preview (Sydney Loop, both axes)
        </Text>
        <View
          style={
            {
              "height": 140,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          Full Route (Sydney, Lap Mode, Group Markers)
        </Text>
        <View
          style={
            {
              "height": 100,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`MainPageView renders correctly in normal layout 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "flexDirection": "row",
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "width": 150,
        },
        false,
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 40,
      }
    }
    style={
      {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 28,
            "fontWeight": "bold",
            "marginBottom": 20,
          }
        }
      >
        Elevation Graph Simulation
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
            "marginBottom": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.1)",
              "borderRadius": 4,
              "minWidth": 80,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontWeight": "bold",
              }
            }
          >
            Play
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.1)",
              "borderRadius": 4,
              "minWidth": 80,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontWeight": "bold",
              }
            }
          >
            Reset
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": 4,
              "flexDirection": "row",
              "gap": 4,
              "padding": 4,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              10
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              20
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "rgba(255,255,255,0.2)",
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              30
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 2,
                "opacity": 1,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                }
              }
            >
              40
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#9fa4a8",
                "fontSize": 10,
                "marginLeft": 4,
              }
            }
          >
            km/h
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#dd9933",
              "borderRadius": 4,
              "minWidth": 80,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontWeight": "bold",
              }
            }
          >
            Lap: 
            ON
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#dd9933",
            "fontSize": 14,
            "fontWeight": "700",
            "marginBottom": 20,
          }
        }
      >
        Position: 
        0.0
        m
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          List Preview (Teide, no axes/colors)
        </Text>
        <View
          style={
            {
              "height": 50,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          Route Detail (Teide, colors/X axis)
        </Text>
        <View
          style={
            {
              "height": 160,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          2km Preview (Sydney Loop, both axes)
        </Text>
        <View
          style={
            {
              "height": 140,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.05)",
            "borderRadius": 8,
            "marginBottom": 30,
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9fa4a8",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 8,
              "textTransform": "uppercase",
            }
          }
        >
          Full Route (Sydney, Lap Mode, Group Markers)
        </Text>
        <View
          style={
            {
              "height": 100,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
